--- a/arch/arm/mach-rk30/Makefile
+++ b/arch/arm/mach-rk30/Makefile
@@ -33,6 +33,7 @@ obj-$(CONFIG_MACH_RK30_PHONE) += board-rk30-phone.o board-rk30-phone-key.o
 obj-$(CONFIG_MACH_RK30_BOX_HAMBURGER) += board-rk30-box.o board-rk30-sdk-rfkill.o
 obj-$(CONFIG_MACH_RK30_BOX_PIZZA) += board-rk30-box.o board-rk30-sdk-rfkill.o
 obj-$(CONFIG_MACH_RK30_BOX_HOTDOG) += board-rk30-box.o board-rk30-sdk-rfkill.o
+obj-$(CONFIG_MACH_MARSBOARD) += marsboard-rk3066-px2.o board-rk30-sdk-rfkill.o
 
 obj-$(CONFIG_MACH_RK30_PHONE_PAD) += board-rk30-phonepad.o board-rk30-phonepad-key.o
 obj-$(CONFIG_MACH_RK30_PHONE_LOQUAT) += board-rk30-phone-loquat.o board-rk30-phone-loquat-key.o
