--- a/arch/arm/configs/marsboard_rk3066_px2_hdmi_defconfig
+++ b/arch/arm/configs/marsboard_rk3066_px2_hdmi_defconfig
@@ -255,6 +255,7 @@ CONFIG_UART3_CTS_RTS_RK29=y
 # CONFIG_HW_RANDOM is not set
 CONFIG_I2C=y
 # CONFIG_I2C_COMPAT is not set
+CONFIG_I2C_CHARDEV=y
 CONFIG_I2C0_CONTROLLER_RK30=y
 CONFIG_I2C1_CONTROLLER_RK30=y
 CONFIG_I2C2_CONTROLLER_RK30=y
